objects/SFDC_Project__c.object
<CustomObject>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chris Anderson</fullName>
                </value>
                <value>
                    <fullName>Ryan Burrowbridge</fullName>
                </value>
                <value>
                    <fullName>Bradley Hibberd</fullName>
                </value>
                <value>
                    <fullName>Bryan Morrison</fullName>
                </value>
                <value>
                    <fullName>Ben Walter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roof_Mounts_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Mounts In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structural Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>Opportunity__r.Expected_Install_Days__c  - (Install_Hours__c/40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Stage__c</fullName>
        <label>Construction Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Locked</fullName>
                </value>
                <value>
                    <fullName>Subcontractors Selected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Work 90% Completed</fullName>
                </value>
                <value>
                    <fullName>Inspections Complete</fullName>
                </value>
                <value>
                    <fullName>Cust. Accept. Complete</fullName>
                </value>
                <value>
                    <fullName>Post Mortem Completed</fullName>
                </value>
                <value>
                    <fullName>Roof Mounts/Rough In</fullName>
                </value>
                <value>
                    <fullName>Racking In</fullName>
                </value>
                <value>
                    <fullName>Modules In</fullName>
                </value>
                <value>
                    <fullName>Elec. Inspec. Pending</fullName>
                </value>
                <value>
                    <fullName>Inspection Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Contract</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Ready to Handoff</fullName>
                </value>
                <value>
                    <fullName>Plans Ready</fullName>
                </value>
                <value>
                    <fullName>Permitted</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sales Complete</fullName>
                </value>
                <value>
                    <fullName>Construction Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SQA_Approved_Date__c</fullName>
        <label>SQA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQA_Submission_Date__c</fullName>
        <label>SQA Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Price__c</fullName>
        <label>SREC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Purchaser__c</fullName>
        <label>SREC Purchaser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seismic_Zone__c</fullName>
        <label>Seismic Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Design_Engineer__c</fullName>
        <label>Senior Design Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Logan Boutilier</fullName>
                </value>
                <value>
                    <fullName>Bryan Morrison</fullName>
                </value>
                <value>
                    <fullName>Brian Tam</fullName>
                </value>
                <value>
                    <fullName>Ben Walter</fullName>
                </value>
                <value>
                    <fullName>Ben Foss-Michaelis</fullName>
                </value>
                <value>
                    <fullName>Gabe Landes</fullName>
                </value>
                <value>
                    <fullName>Randy Batchelor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shade_Analysis_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shade Analysis Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_CityF__c</fullName>
        <description>Automatically populated from the associated Account record Site City field.</description>
        <formula>Account__r.ShippingCity</formula>
        <inlineHelpText>Automatically populated from the associated Account record Site City field.</inlineHelpText>
        <label>Site City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <label>Site City-DO NOT USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_StateF__c</fullName>
        <description>Automatically populated from the associated Account record Site State field.</description>
        <formula>Account__r.ShippingState</formula>
        <inlineHelpText>Automatically populated from the associated Account record Site State field.</inlineHelpText>
        <label>Site State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State-DO NOT USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street_AddressF__c</fullName>
        <description>Automatically populated from the associated Account record Site Address field.</description>
        <formula>Account__r.ShippingStreet</formula>
        <inlineHelpText>Automatically populated from the associated Account record Site Address field.</inlineHelpText>
        <label>Site Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street_Address__c</fullName>
        <label>Site Street Address- DO NOT USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip_CodeF__c</fullName>
        <description>Automatically populated from the associated Account record Site Zip/Postal Code field.</description>
        <formula>Account__r.ShippingPostalCode</formula>
        <inlineHelpText>Automatically populated from the associated Account record Site Zip/Postal Code field.</inlineHelpText>
        <label>Site Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip_Code__c</fullName>
        <label>Site Zip Code-DO NOT USE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_Plan_Start_Date__c</fullName>
        <label>Slot Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snow_Load__c</fullName>
        <label>Snow Load</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Fund__c</fullName>
        <formula>TEXT( Opportunity__r.Solar_Fund__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structural_Engineer__c</fullName>
        <label>Structural Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_To_Quality_Assurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Commissioning Docs should be uploaded to the box.com folder for the Account</inlineHelpText>
        <label>Submit To Quality Assurance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Federal__c</fullName>
        <label>Submitted Date (Federal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SystemDesigner__c</fullName>
        <label>System Designer-DO NOT USE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rex Lu</fullName>
                </value>
                <value>
                    <fullName>Amy Scher</fullName>
                </value>
                <value>
                    <fullName>Kevin Roll</fullName>
                </value>
                <value>
                    <fullName>Hart Webb</fullName>
                </value>
                <value>
                    <fullName>Ted Petsas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <formula>TEXT(WATTS_STC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Contract_Signed_to_Handoff__c</fullName>
        <formula>( Hand_off_Date__c - Contract_Signed_Date__c )/7*5</formula>
        <label>Time- Contract Signed to Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Contract_Signed_to_Permit_Set__c</fullName>
        <formula>( Permit_Set_Completed__c -  Contract_Signed_Date__c )/7 *5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time- Contract Signed to Permit Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Permit_Set_to_Completion__c</fullName>
        <formula>(SFDC_Project_End_Date__c - Permit_Set_Completed__c )/7*5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time- Permit Set to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fixed_Cost_Feasibility__c</fullName>
        <description>Total value of the Fixed Cost(s) for this project.</description>
        <label>Total Fixed Cost (Feasibility)</label>
        <summarizedField>Fixed_Cost__c.Amount__c</summarizedField>
        <summaryForeignKey>Fixed_Cost__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hourly_Cost_to_Borrego__c</fullName>
        <label>Borrego Total Time Entries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Design2__c</fullName>
        <label>Total Invoiced (Design)</label>
        <summarizedField>Invoices__c.Total_Charges__c</summarizedField>
        <summaryFilterItems>
            <field>Invoices__c.Stage__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoices__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoices__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Design__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Invoiced (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Feasibility2__c</fullName>
        <label>Total Invoiced (Feasibility)</label>
        <summarizedField>Invoices__c.Total_Charges__c</summarizedField>
        <summaryFilterItems>
            <field>Invoices__c.Stage__c</field>
            <operation>equals</operation>
            <value>Feasibility, Task 3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoices__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved, Submitted to Customer, Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoices__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Feasibility__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Invoiced (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Procurement2__c</fullName>
        <label>Total Invoiced (Procurement)</label>
        <summarizedField>Invoices__c.Total_Charges__c</summarizedField>
        <summaryFilterItems>
            <field>Invoices__c.Stage__c</field>
            <operation>equals</operation>
            <value>Procurement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoices__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoices__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Procurement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Invoiced (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Design__c</fullName>
        <formula>IF( Cost_to_Customer_Design__c &gt;= Not_To_Exceed_Design__c , 0, 
IF( Total_To_Invoice_Design__c &gt;= Not_To_Exceed_Design__c, Not_To_Exceed_Design__c, Total_To_Invoice_Design__c - Total_Invoiced_Design2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Feasibility__c</fullName>
        <formula>IF( Not_To_Exceed_Feas__c  &gt; 0 &amp;&amp;  Cost_to_Customer_Feasibility__c  &gt;=  Not_To_Exceed_Feas__c ,
    Not_To_Exceed_Feas__c  -  Total_Invoiced_Feasibility2__c ,
    IF( Fixed_Cost_Feasibility__c ,
        Total_Fixed_Cost_Feasibility__c  -  Total_Invoiced_Feasibility2__c ,
        Total_To_Invoice_Feasibility__c  -  Total_Invoiced_Feasibility2__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Procurement__c</fullName>
        <formula>IF( Cost_to_Customer_Procurement__c &gt;= Not_To_Exceed_Procurement__c , 0, 
IF( Total_To_Invoice_Procurement__c &gt;= Not_To_Exceed_Procurement__c, Not_To_Exceed_Procurement__c,Total_To_Invoice_Procurement__c - Total_Invoiced_Procurement2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Retainer_Feasibility__c</fullName>
        <description>Total value of the Retainer(s) for this project.</description>
        <label>Total Retainer (Feasibility)</label>
        <summarizedField>Retainer__c.Amount__c</summarizedField>
        <summaryForeignKey>Retainer__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_To_Invoice_Design__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Billings  (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_To_Invoice_Feasibility__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Billings (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_To_Invoice_Procurement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Billings (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_kW__c</fullName>
        <label>Total kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Day__c</fullName>
        <label>Trade Day</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Off_taker__c</fullName>
        <label>Trade Off taker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Quarter__c</fullName>
        <label>Trade Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traded_Price__c</fullName>
        <label>Traded Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_CompanyF__c</fullName>
        <description>Automatically populated from the associated Opportunity record Utility Company field.</description>
        <formula>TEXT( Opportunity__r.Utility_Company__c )</formula>
        <inlineHelpText>Automatically populated from the associated Opportunity record Utility Company field.</inlineHelpText>
        <label>Utility Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company-DO NOT USE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG&amp;E</fullName>
                </value>
                <value>
                    <fullName>SCE</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E</fullName>
                </value>
                <value>
                    <fullName>NSTAR</fullName>
                </value>
                <value>
                    <fullName>National Grid</fullName>
                </value>
                <value>
                    <fullName>CPAU</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>Healdsburg</fullName>
                </value>
                <value>
                    <fullName>SMUD</fullName>
                </value>
                <value>
                    <fullName>AP+T</fullName>
                </value>
                <value>
                    <fullName>PSNH</fullName>
                </value>
                <value>
                    <fullName>IID</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
                <value>
                    <fullName>Bear Valley Electric</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>Roseville Electric</fullName>
                </value>
                <value>
                    <fullName>Other - Northern CA</fullName>
                </value>
                <value>
                    <fullName>Other - Southern CA</fullName>
                </value>
                <value>
                    <fullName>Other - East Coast</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>Fitchburg Gas and Electric/Unitil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WATTS_STC__c</fullName>
        <label>Watts STC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by trigger ptoReceived.  If set, ok to update Asset record warranty date.</description>
        <label>Warranty Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watts_to_Date__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Sales&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;Ready to Handoff&apos;), ISPICKVAL(SFDC_Project_Status__c, &apos;On Hold&apos;), ISPICKVAL(SFDC_Project_Status__c, &apos;Dead&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos; &apos;)), WATTS_STC__c*0, 
IF(AND(ISPICKVAL(SFDC_Project_Status__c, &apos;Design&apos;), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos;)), WATTS_STC__c *0.01, 
IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Plans Ready&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;Permitted&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos; ) ), WATTS_STC__c*0.02, 
IF(AND(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Scheduled&apos;) , ISPICKVAL(SFDC_Project_Status__c, &apos;In Progress&apos;)), ISPICKVAL(SFDC_Project_Stage__c, &apos;&apos; ) ), WATTS_STC__c*0.03, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Roof Mounts/Rough In&apos; ), WATTS_STC__c*0.06, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Racking In&apos; ), WATTS_STC__c*0.22, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Modules In&apos; ), WATTS_STC__c *0.94, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Elec. Inspec. Pending&apos; ), WATTS_STC__c *0.94, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Inspection Pending&apos; ), WATTS_STC__c *0.96, 
IF(ISPICKVAL(SFDC_Project_Stage__c, &apos;Completed&apos; ), WATTS_STC__c*0.99, 
IF(OR(ISPICKVAL(SFDC_Project_Status__c, &apos;Sales Complete&apos; ), ISPICKVAL(SFDC_Project_Status__c, &apos;Completed&apos; )), WATTS_STC__c , 0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watts to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Windspeed__c</fullName>
        <label>Windspeed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Payment_Date__c</fullName>
        <label>1st Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_Baseline_Date__c</fullName>
        <label>50% Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_Days_from_Baseline_Date__c</fullName>
        <formula>IF( ISBLANK( X50_Set_Completed__c ), X50_Baseline_Date__c -TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>50% Days from Baseline Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50_Forecast_Release_Date__c</fullName>
        <label>50% Forecast Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_On_Hold_Days__c</fullName>
        <description>next to 50% Baseline DateField in the Flex table</description>
        <label>50% On Hold Days</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50_Review_Baseline__c</fullName>
        <label>50% Review Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_Review_Date__c</fullName>
        <label>50% Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_Set_Completed__c</fullName>
        <label>50% Set Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X50_count__c</fullName>
        <description>this will be used for reporting only</description>
        <formula>IF(ISBLANK(  X50_on_time__c  ) || ( X50_on_time__c  &gt;= 0 &amp;&amp;   X50_Baseline_Date__c  &lt; DATE(2012,08,01)) ,NULL,1)</formula>
        <label>50% count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50_on_time__c</fullName>
        <formula>IF(ISBLANK(X50_Set_Completed__c ) &amp;&amp; (X50_Baseline_Date__c &lt; TODAY() - 15),0,
IF(X50_Set_Completed__c -  X50_Baseline_Date__c  &lt; 15 &amp;&amp;  X50_Baseline_Date__c &gt; DATE(2012,08,01),1,
IF(ISBLANK(X50_Set_Completed__c ) ||  ISBLANK(X50_Baseline_Date__c ),Null,0)))</formula>
        <label>50% on time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Completed__c</fullName>
        <formula>IF(YEAR(SFDC_Project_End_Date__c) = 2010, &quot;2010&quot;,
IF (YEAR(SFDC_Project_End_Date__c) = 2011, &quot;2011&quot;,
IF (YEAR(SFDC_Project_End_Date__c) = 2009, &quot;2009&quot;, null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>foremanText__c</fullName>
        <label>foremanText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kWh_kW_Rating__c</fullName>
        <label>kWh/kW Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SFDCProject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Job_Number__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CommercialProjects</fullName>
        <columns>Job_Number__c</columns>
        <columns>NAME</columns>
        <columns>EC__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>Site_CityF__c</columns>
        <columns>Site_StateF__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Number__c</field>
            <operation>startsWith</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>SFDC_Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>SFDC_Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Dead</value>
        </filters>
        <label>1. Active Projects</label>
    </listViews>
    <listViews>
        <fullName>East_Project_Status_Const_Const_Complete</fullName>
        <columns>Financing__c</columns>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>WATTS_STC__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>PTO_Date__c</columns>
        <columns>Permit_Set_Completed__c</columns>
        <columns>Const_Set_Completed__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>Comments_on_Schedule__c</columns>
        <columns>Deadline_Date__c</columns>
        <columns>Deadline_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SFDC_Project__c.Commercial_Project</value>
        </filters>
        <filters>
            <field>SFDC_Project_Status__c</field>
            <operation>equals</operation>
            <value>Construction,Construction Completed</value>
        </filters>
        <filters>
            <field>PTO_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2011</value>
        </filters>
        <filters>
            <field>SFDC_Project_Stage__c</field>
            <operation>contains</operation>
            <value>Budget Lock,Subcontractors,In Progress,Work 90% Completed,Inspections Comple</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Boston,Mid Atlantic</value>
        </filters>
        <label>East Project Status-Const/Const Complete</label>
    </listViews>
    <listViews>
        <fullName>East_Project_Status_New_Design</fullName>
        <columns>Financing__c</columns>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>WATTS_STC__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>PTO_Date__c</columns>
        <columns>Design_Stage__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>Design_Notes__c</columns>
        <columns>Comments_on_Schedule__c</columns>
        <columns>Deadline_Date__c</columns>
        <columns>Deadline_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SFDC_Project__c.Commercial_Project</value>
        </filters>
        <filters>
            <field>SFDC_Project_Status__c</field>
            <operation>equals</operation>
            <value>New,Design</value>
        </filters>
        <filters>
            <field>PTO_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2011</value>
        </filters>
        <filters>
            <field>Job_Number__c</field>
            <operation>startsWith</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Boston,Mid Atlantic</value>
        </filters>
        <label>East Project Status - New/Design</label>
    </listViews>
</CustomObject>